objects/Product_Image__c.object
<CustomObject>
    <label>Product Image</label>
    <nameField>
        <label>Product Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>Product_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hero_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hero Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <label>Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_URL__c</fullName>
        <label>Resource URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Static_Resource__c</fullName>
        <label>Static Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Populated_Image</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Image_Type__c, &quot;Static Resource&quot;), 
    Resource_URL__c = &apos;https://crmitsolutions88-dev-ed--c.vf.force.com/resource/1676451367000/image3?&apos;, 
    Static_Resource__c = &apos;https://crmitsolutions88-dev-ed--c.vf.force.com/resource/1676451367000/image3?&apos;)</errorConditionFormula>
        <errorMessage>Automatic Populated</errorMessage>
    </validationRules>
</CustomObject>